<resources>
    <string name="error_logout">Error on log out</string>
    <string name="app_name">WeRoom</string>
    <string name="button_login">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="button_signup">SIGN UP</string>
    <string name="refer_to_login">Already have an existing account? Log in Here!</string>
    <string name="refer_to_signup">New User? Register Here!</string>
    <string name="empty_fields">Empty Fields!</string>
    <string name="login_textfield">Login</string>
    <string name="pass_too_short">Password should be at least 6 characters</string>
    <string name="email_in_use">Email already in use</string>
    <string name="title_activity_login">Log in</string>
    <string name="set_passw">Set your password</string>
    <string name="same_passw">The two passwords have to be the same.</string>
    <string name="signed_in">Sing in successful: </string>
    <string name="google_fail">Google sign in failed!</string>
    <string name="create_acc">Create Account</string>
    <string name="acc_creation_failed">Account creation failed</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="keep_login">Keep me logged in.</string>
    <string name="login_process_error">We could not save your account :(</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="type_email">Type your email first!</string>
    <string name="enter_passw">Enter your password!</string>
    <string name="empty_field">The field is empty.</string>
    <string name="not_succ">Login unsuccessful. Email doesn\'t exist. Go to Sign Up to create an account! </string>
    <string name="error">Error</string>
    <string name="forgot_passw">Forgot password?</string>
    <string name="facebook_disconnected">Facebook account disconnected</string>
    <string name="google_connection_failed">Google connection failed</string>
    <string name="hint_age">Age</string>
    <string name="hint_name">Name</string>
    <string name="prompt_gender">Select a Gender</string>
    <string name="prompt_country">Select a Country</string>
    <string-array name="gender_array">
        <item>Select your gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="role_array">
        <item>Landlord</item>
        <item>Tenant</item>
    </string-array>
    <string name="create_profile">Create profile</string>
    <string name="description">Describe yourself using tags</string>
    <string name="select_gender">Select your gender!</string>
    <string name="select_country">Select your country!</string>
    <string name="select_role">Select your role!</string>
    <string name="type_name">Please type your name!</string>
    <string name="please_picture">Please add profile picture</string>
    <string name="type_age">Please type your age!</string>
    <string name="too_young">You should be at least 18.</string>
    <string name="too_old">You are too old. :)</string>
    <string name="hint_1">Outgoing</string>
    <string name="hint_2">Cat Person</string>
    <string name="hint_3">Vegan</string>
    <string name="requiered_field">Requiered field</string>
    <string name="min_age">Minimum age is 18</string>
    <string name="max_age">Maximum age is 99</string>
    <string name="wrong_min">Wrong min value</string>
    <string name="wrong_max">Wrong max value</string>
    <string name="age_of_ll">Preferred age of Landlord</string>
    <string name="nationality_of_ll">Preferred Nationality of Landlord</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="smoke_friendly">Smoke Friendly</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="role">Are you a Landlord or Tenant?</string>
    <string name="tag_description">Describe yourself using Tags</string>
    <string name="tag_description_show">Your attributes: </string>
    <string-array name="occupation">
        <item>Student </item>
        <item>Working </item>
        <item>Do not care </item>
    </string-array>
    <string name="add_photo">Add photo</string>
    <string name="empty_tag">You cannot add empty tags.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="confirm">Confirm</string>
    <string name="infoForgotPass">Forgot Password?</string>
    <string name="laundry">Laundry</string>
    <string name="handicap_friendly">Handicap Friendly</string>
    <string name="preferred_age_of_landlord">Preferred age of Landlord</string>
    <string name="_50km">50km</string>
    <string name="_5km">5km</string>
    <string name="rent">Rent*</string>
    <string name="deposit">Deposit*</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="radius_from_center">Radius from center</string>
    <string name="internet">Internet</string>
    <string name="furnished">Furnished</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="choose_city">Choose a city where you want to live</string>
    <string name="only_3_rooms">You can only list three rooms</string>
    <string name="city">City *</string>
    <string-array name="rending_period_array">
        <item>Select period of renting</item>
        <item>0 – 3 Months </item>
        <item>3 – 6 Months </item>
        <item>6 – 12 Months </item>
        <item>12+ Months </item>
    </string-array>
    <string name="choose_period">Choose period of renting *</string>
    <string name="social_tenant">Social Tenant?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="don_t_care">Don\'t Care</string>
    <string name="allow_smoking">Do you allow smoking?</string>
    <string name="kind_of_tenant">What kind of tenant are you looking for?</string>
    <string name="age_of_tenant">Preferred age of tenant</string>
    <string name="wrong_age">Wrong age</string>
    <string name="rent_month">Rent pr Month *</string>
    <string name="deposit_room">Deposit *</string>
    <string name="rent_period">Period Of Renting *</string>
    <string name="max_number_pictures">Add up to 10 Pictures</string>
    <string name="post_room">Post Room</string>
    <string name="address">Address *</string>
    <string name="size_room">Size of Room (m2)*</string>
    <string name="floor">Floor</string>
    <string name="describe_room">Description *</string>
    <string name="post">Post Room</string>
    <string name="add_more_rooms">Add another room.</string>
    <string name="room_creation_failed">Could not create room</string>
    <string name="more_three_rooms_error">You can only have three rooms</string>
    <string name="type_rent">Please type rent</string>
    <string name="type_deposit">Please type deposit</string>
    <string name="type_address">Please type the address</string>
    <string name="type_room_size">Please type the size of the room</string>
    <string name="type_description_room">Please describe your room</string>
    <string name="at_least_three_pictures">The rooms needs three pictures</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_message">Your room has been posted. You can add up to three rooms.</string>
    <string name="dialog_title">Room posted!</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="minimum_pictures">(OBS! Minimum 3 Pictures)</string>
    <string name="about_room">About the Room</string>
    <string name="facilities">Facilities</string>
    <string name="common_area">Common Area</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">343614792929445</string>
    <string name="fb_login_protocol_scheme">fb343614792929445</string>
    <string name="google_credential">462352669563-jo1gvg68g9nfqnt13celi7b87em21gop.apps.googleusercontent.com</string>
    <string name="google_cloud_api_key">AIzaSyDH4SglTZWSLqFwJLgH66qWSSxM3cfunEg</string>
    <string name="dkk">DKK</string>
    <string name="logout">Logout</string>
    <string name="account_edit">Edit</string>
    <string name="account_settings">Settings</string>
    <string name="connection_error_FB">Could not connect to Facebook</string>
    <string name="connection_error_Google">Could not connect to Google</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_chat">Chat</string>
    <string name="email_sent">Email sent</string>
    <string name="area">Area</string>
    <string name="address_room">Address</string>
    <string name="period">Period</string>
    <string name="about_me">About Me</string>
    <string name="smoke">Smoking habits</string>
    <string name="searching_for">I\'m looking for</string>
    <string name="searching_in">Searching  in</string>
    <string name="rent_of_room">Rent</string>
    <string name="area_of_room">Area</string>
    <string name="nationality_text">Nationality</string>
    <string name="age_tenant">Age</string>
    <string name="period_of_rent">Rent period</string>
    <string name="room_deposit">Deposit</string>
    <string name="room_size">Size (m\u00B2)</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_landlord">Edit landlord</string>
    <string name="edit_tenant">Edit search criteria</string>
    <string name="current_role">Your current role:</string>
    <string name="edit_rooms">Edit rooms</string>
    <string name="edit_room">Edit your room</string>
    <string name="edit_the_room">Edit room</string>
    <string name="delete_room">Delete room</string>
    <string name="lazy_swipe">Lazy swipe</string>
    <string name="passive_swipe">Passive swipe?</string>
    <string name="info_passive_swipe">If enabled, you won\'t have to swipe. Automatically matches with tenants for you.</string>
    <string name="channel_name">WeRoom match</string>
    <string name="channel_description">WeRoom showing when users get a new match</string>
    <string name="delete_account">Delete account</string>
    <string name="battery_safe">Battery safe mode</string>
    <string name="name_holder">Name : %s</string>
    <string name="age_holder">Age : %s</string>
    <string name="nationality_holder">Nationality : %s</string>
    <string name="application_close">Close Application</string>
    <string name="close_app_msg">Are you sure you want to close WeRoom?</string>
    <string name="gdpr_consent">I consent that I agree with the </string>
    <string name="privacy_policy"><u>privacy policy</u></string>
    <string name="no_more_cards">No more matches! Check again later :)</string>
</resources>