<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    app:cardBackgroundColor="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">>
                <ImageButton
                    android:id="@+id/button_exit_info_page_lord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="28dp"
                    android:background="@drawable/custom_round_exit_button"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                <ImageView
                    android:id="@+id/card_lord_picture"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    app:srcCompat="@drawable/profile_pic_placeholder" />

                <TextView
                    android:id="@+id/card_lord_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dialog_title"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/card_lord_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/hint_age"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_lord_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_lord_nation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/nationality"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_lord_occupation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/occupation"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_lord_smoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/smoke"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_lord_aboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/about_me"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/card_lord_description"
                    android:layout_width="match_parent"
                    android:layout_height="143dp"
                    android:text="here the description is displayed"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/card_lord_lookingfor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/searching_for"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>


</android.support.v7.widget.CardView>