<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="486dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#FF5A60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="486dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photoCardTenant"
                android:layout_width="match_parent"
                android:layout_height="326dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textTenantCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/rentOfRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/rent"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/areaOfRoom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dp"
                android:text="@string/area"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/periodOfRentingRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="3dp"
                android:text="@string/rent_period"
                android:textColor="@color/white"
                android:textSize="25sp" />



        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

