<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="486dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#FF5A60">

        <RelativeLayout
            android:layout_width="410dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photoCard"
                android:layout_width="match_parent"
                android:layout_height="326dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/text"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photoCard"
                android:layout_alignParentStart="true"
                android:layout_marginStart="263dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nationalityOfTenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="280dp"
                android:layout_marginBottom="8dp"
                android:text="@string/nationality"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ageOfTenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="351dp"
                android:layout_marginBottom="56dp"
                android:text="@string/hint_age"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nameOfTenant"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="306dp"
                android:layout_marginBottom="107dp"
                android:text="@string/hint_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

